<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>ch.sbb</groupId>
	<artifactId>matsim-sbb</artifactId>
	<version>0.11.9</version>
	<name>MATSim SBB Project</name>
	<description>MATSim for project MEMO-P: Multimodale Erweiterung der Modell-Landschaft P </description>

	<repositories>
		<repository>
			<!-- MATSim is not on Maven central -->
			<id>matsim</id>
			<url>https://dl.bintray.com/matsim/matsim</url>
		</repository>

		<repository>
			<!-- For MATSim snapshots: -->
			<id>ojo-snapshots</id>
			<url>http://oss.jfrog.org/libs-snapshot</url>
		</repository>

		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<dependencies>

		<dependency>
			<groupId>org.matsim</groupId>
			<artifactId>matsim</artifactId>
			<version>11.0</version>
		</dependency>

		<dependency>
			<groupId>org.matsim</groupId>
			<artifactId>matsim</artifactId>
			<version>11.0</version>
			<classifier>tests</classifier>
			<scope>test</scope>
			<type>test-jar</type>
		</dependency>

		<!-- https://mvnrepository.com/artifact/net.postgis/postgis-jdbc -->
		<dependency>
			<groupId>net.postgis</groupId>
			<artifactId>postgis-jdbc</artifactId>
			<version>2.1.7.2</version>
		</dependency>

		<dependency>
			<groupId>com.github.SchweizerischeBundesbahnen</groupId>
			<artifactId>matsim-sbb-extensions</artifactId>
			<version>11.2</version>
		</dependency>

		<!-- Include the JUnit testing library -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>kml</groupId>
			<artifactId>kml</artifactId>
			<version>2.2.0</version>
			<type>pom</type>
		</dependency>

		<!-- Include the jacobs library to use the COM interface -->
		<dependency>
			<groupId>com.hynnet</groupId>
			<artifactId>jacob</artifactId>
			<version>1.18</version>
		</dependency>

		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>3.17</version>
		</dependency>

		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>3.17</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3 -->
		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-java-sdk-s3</artifactId>
			<version>1.11.265</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>pl.project13.maven</groupId>
				<artifactId>git-commit-id-plugin</artifactId>
				<version>2.1.13</version>
				<executions>
					<execution>
						<id>get-the-git-infos</id>
						<goals>
							<goal>revision</goal>
						</goals>
						<phase>compile</phase>
					</execution>
				</executions>
				<configuration>
					<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
					<dateFormat>yyyyMMdd_HHmmss</dateFormat>
				</configuration>


			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<showWarnings>false</showWarnings>
					<showDeprecation>false</showDeprecation>
					<encoding>UTF-8</encoding>
					<!-- configure initial and maximal memory for compiling -->
					<fork>true</fork>
					<meminitial>128m</meminitial>
					<maxmem>512m</maxmem>
					<compilerArguments>
						<Xmaxwarns>4000</Xmaxwarns>
						<Xmaxerrs>100</Xmaxerrs>
					</compilerArguments>
				</configuration>
			</plugin>
			<plugin>
			  <groupId>org.apache.maven.plugins</groupId>
			  <artifactId>maven-eclipse-plugin</artifactId>
			  <configuration>
			    <downloadSources>true</downloadSources>
			    <downloadJavadocs>true</downloadJavadocs>
			  </configuration>
			</plugin>

			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<archive>
						<manifest>
							<mainClass>org.matsim.gui.MATSimGUI</mainClass>
						</manifest>
					</archive>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<distributionManagement>
		<repository>
			<id>mvn</id>
			<url>https://bin.sbb.ch/artifactory/simba.mvn/</url>
		</repository>
		<snapshotRepository>
			<id>mvn</id>
			<url>https://bin.sbb.ch/artifactory/simba.mvn/</url>
		</snapshotRepository>
	</distributionManagement>

</project>
